- add SMS rate by prefix (anton)
- add SMS credit per user (anton)
- add playsms_web option in kannel gateway administration (emmanuel)
- add themes selection from web in main configuration (emmanuel)
- add gateway module selection from web in main configuration (anton)
- add limit 100 on getting delivery status via input.php (thapa)
- fix security in input.php, one can get data without proper auth (thapa)
- fix on all php files, close unterminated variables with single-quote (anton)
- fix on all php files, replace <? with <?php (anton)
- fix wrong dlr_url when Kannel and playSMS is not on the same location (emmanuel)
- fix unable to save preferences from admin menu, manage user (anton)
- fix allow \r and \n in SMS text, http://smstools3.kekekasvi.com/topic.php?id=328 (anton)
- fix kannel gateway, bearerbox to accept hostname, not only IP (srosa)
- fix kannel gateway, missing bearerbox host and sendsms port, plugin/gateway/kannel/fn.php (anton)
- fix dlr-url misformed, plugin/gateway/kannel/fn.php (anton)
- fix RFI LFI bug, http://www.securityfocus.com/bid/33138 (anton)

Version 0.9.4 - 080713
- on themes, add loginpage.php and rename welcome.php to default.php (anton)
- remove bin/kannel_incoming.sh (anton)
- kannel can only pass MOs to playSMS using geturl method, see contrib/kannel/kannel.conf (anton)
- remove PlaySMS Web URL and Kannel Incoming Path, kannel gateway, kannel.php (anton)
- change delivery mechanism, now using file_get_contents instead of fsockopen, kannel gateway (anton)
- fix (again and again), mclass=0 for flash, mclass=1 for text to mobile, kannel gateway, fn.php (anton)
- fix delivering messages, anticipate responses from kannel latest version, kannel gateway (anton)
- fix admin auth for non multi session login (anton)
- fix user preferences unable to modify email (anton)
- change default login type to non multi session login (anton)

Version 0.9.3 - 080520